add source files
        modified:   public/sumo.css
        modified:   public/sumo.html
        modified:   public/sumo_client.js
        modified:   sumo_server.js

--- a/public/sumo.html
+++ b/public/sumo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>sumo battle</title>
-    <meta name="sumo battle" />
+    <meta name="SUMO BATTLE" />
     <link rel="stylesheet" href="./sumo.css">
   </head>
   <body>
